[tool.poetry]
name = "meshtastic-python-scripts"
version = "0.0.1"
description = ""
authors = ["Ian McEwen <ianmcorvidae@ianmcorvidae.net>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
meshtastic = {extras = ["cli"], version = "^2.6.2"}
paho-mqtt = "^2.1.0"
cryptography = "^42.0.8"
bitstring = "^4.2.3"
networkx = "^3.4.2"
pydot = "^3.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
